fixed header text alignment added blur animation on tap

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 * {
   font-family: Proxima Nova,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, Helvetica, 'Arial Narrow Bold', sans-serif; */
-  text-shadow: 1px 2px #000000;
+  text-shadow: 1px 1px 2px var(--darkest), 0 0 1em var(--darkest), 0 0 0.3em var(--darkest);
 }
  
 body {
@@ -231,7 +231,7 @@ ul {
   position: relative;
   border: 1px solid var(--grayTone);
   border-radius: 20px;
-  box-shadow: 7px 7px 5px var(--grayTone);
+  box-shadow: none;
   position: relative;
   object-fit: contain;
 }
@@ -318,7 +318,7 @@ ul {
   border: 2px solid var(--grayTone);
   border-radius: 20px;
   -webkit-border-radius: 25px;
-  box-shadow: 7px 7px 5px var(--grayTone);
+  box-shadow: none;
 }
 
 /* individual portfolio images used to link to work examples */
@@ -375,7 +375,8 @@ ul {
 
 /* responsive glows for relevant states */
 .hero_example:hover, .tile_example:hover, .tile_label:hover, .hero_example:active, .tile_example:active, .tile_label:active  {
-  box-shadow: none;
+  
+  box-shadow: 1px 1px 3px var(--grayTone), 0 0 1em var(--grayTone), 0 0 0.2em var(--grayTone);
   border: 1px solid var(--grayTone);
 }
 
@@ -574,10 +575,14 @@ a {
       right: -30px;
       top: 20px;
   }
-  
-  .header_nav, .nav_links {
-      display: none;
+  .header_name {
+    text-align: center;
   }
+
+  .header_nav, .nav_links {
+    display: none;
+  }
+
   .section_article, .article_copy {
       margin-right: 5%;
       margin-left: 5%;
